# BTC-DCA-Strategies

./: App.tsx  PRD.md  README.md  README_zh.md  SEO_AUDIT_REPORT.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  utils.ts  vite.config.ts
backend/api-server/: Cargo.toml
backend/api-server/src/: main.rs
backend/collector/: collector.py
components/: ComparisonTable.tsx  Header.tsx  InputForm.tsx  InvestmentChart.tsx  LanguageSelector.tsx  MetricCard.tsx  PortfolioChart.tsx  ResultsDashboard.tsx  ThemeToggle.tsx  chartConfig.ts
components/ui/: Button.tsx  Card.tsx  Input.tsx  Label.tsx  Tabs.tsx  Tooltip.tsx
contexts/: ThemeProvider.tsx
data/: assetRegistry.ts  btcPriceData.ts  priceData.ts
i18n/: LanguageProvider.tsx  index.ts
i18n/locales/: en.ts  ja.ts  zh.ts
public/: site.webmanifest
services/: apiService.ts  simulationService.ts
specs/: ETFsDCA.md  Research.txt  SYSTEM_DESIGN.md
src/: index.css
